<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_conversation_list">ConversationListActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="app_name">幸福100</string>
    <string name="main_tab_find">发现</string>
    <string name="main_tab_message">通讯</string>
    <string name="main_tag_daily">日报</string>
    <string name="main_tab_service">发现</string>
    <string name="main_tab_my_page">我的</string>
    <string name="title_activity_wellcom">幸福100</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="cancel">取消</string>
    <string name="pls_input_your_phone_nummber">请输入你的手机号</string>
    <string name="country">国家和地区</string>
    <string name="confirm">确定</string>
    <string name="pls_input_vcode">请填写验证码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_vcode_tips">接受短信大概需要22秒钟</string>
    <string name="login_by_phone_num">使用手机号登录</string>
    <string name="password">密码</string>
    <string name="pls_input_password">6-20个包含英文字母及数字的组合</string>
    <string name="login_by_vcode">通过短信验证码登录</string>
    <string name="connected_failed">连接服务器异常。</string>
    <string name="pls_input_user_info">请填写个人信息</string>
    <string name="register_confirm_tips">请设置您的头像和昵称，方便您的家人和朋友认出你</string>
    <string name="nick_name">昵称</string>
    <string name="register_confirm_pls_input_nick_name">请输入昵称</string>
    <string name="registet_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_by_vercode">通过短信验证码登录</string>
    <string name="more">更多</string>
    <string name="find_back_password">找回密码</string>
    <string name="login_has_problem">登录遇到问题</string>
    <string name="login_phone_msg_tips">你的手机号+8617777777目前能不能接收短信？</string>
    <string name="can_not">不能</string>
    <string name="can_receive_phone_msg">能接收短信</string>
    <string name="can_receive_email_msg">能登录</string>
    <string name="tv_back">返回</string>
    <string name="can_login_by_xf_num_or_phone_msg">你可以通过手机号+短信验证码登录幸福100</string>
    <string name="phone_num_format_error">手机号码格式错误</string>
    <string name="shake_to_fresh">摇一摇更新当天数据</string>
    <string name="health_score">健康得分</string>
    <string name="blood_pressure_score">血压-收缩压</string>
    <string name="main_tab_family">家族</string>
    <string name="main_tag_health">健康</string>

    <string name="empty"></string>
    <!--zxing-->
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加至日程表</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨打电话</string>
    <string name="button_email">发送 E-mail</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开商品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">分享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过 E-mail 分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">E-mail 地址</string>
    <string name="contents_location">经纬度</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信号码</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史记录</string>
    <string name="history_email_title">条码扫描器的历史</string>
    <string name="history_empty">空</string>
    <string name="history_empty_detail">没有历史记录</string>
    <string name="history_send">发送历史记录</string>
    <string name="history_title">历史记录</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">创建二维码</string>
    <string name="msg_bulk_mode_scanned">批量扫描模式：条码已扫描并保存</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法生成条码。</string>
    <string name="msg_error">错误</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开应用。条码内容可能无效。</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">确定吗？</string>
    <string name="msg_unmount_usb">抱歉，无法访问 SD 卡。</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_name">选项</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日程</string>
    <string name="result_email_address">找到电子邮件地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到商品</string>
    <string name="result_sms">找到短信号码</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到 URL </string>
    <string name="result_wifi">找到 Wi-Fi 配置</string>
    <string name="sbc_name">Google 图书搜索</string>
    <string name="wifi_changing_network">连接到 Wi-Fi \u2026</string>
    <string name="copy_success">复制成功</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
</resources>
