<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/common_divider"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.happiness100.app.ui.activity.RegisterActivity">


    <include
        layout="@layout/layout_title_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/register_confirm_tips"
            android:textColor="@color/common_deep_gray"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/iv_face"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:src="@drawable/iv_select_photo_normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nick_name"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edit_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/register_confirm_pls_input_nick_name"
            android:textColorHint="@color/common_light_gray"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/text_line_color"/>

    <Button
        android:id="@+id/btn_register"
        style="@style/btn_light_red"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/btn_register"/>
</LinearLayout>
