<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="com.happiness100.app.ui.activity.LoginHasProblemActivity">

    <include layout="@layout/layout_common_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:gravity="center"
            android:id="@+id/tv_phone_msg_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            style="@style/Font_Desc"
            android:text="@string/login_phone_msg_tips"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <Button
                android:background="@drawable/btn_common_gray"
                style="@style/Font_Button_White"
                android:layout_centerVertical="true"
                android:id="@+id/can_not_receive"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/can_not"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                style="@style/Font_Button_White"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_common_pink"
                android:text="@string/can_receive_email_msg"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
