<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:showDividers="beginning|middle"
    tools:context="com.happiness100.app.ui.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="6dp"
        android:paddingTop="8dp"

        android:orientation="vertical"
        android:showDividers="end">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:textColor="@color/common_red"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/pls_input_vcode"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/common_light_gray"
            android:text="验证码短信已经发送到" />

        <TextView
            android:id="@+id/tv_phone_msg_tips"
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_height="wrap_content"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/common_divider"
        android:orientation="vertical"
        android:showDividers="end">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <EditText
                android:id="@+id/edit_vcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:paddingLeft="8dp"
                android:textColorHint="@color/common_light_gray"
                android:gravity="center_vertical"
                android:hint="@string/pls_input_vcode" />
            <Button
                android:id="@+id/btn_get_vcode"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:layout_height="match_parent"
                android:text="重新获取验证码"
                />
        </RelativeLayout>

    </LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:divider="@drawable/common_divider"
    android:showDividers="beginning"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:background="@drawable/btn_pale_red"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/btn_next" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@color/common_deep_gray"
        android:text="@string/tv_vcode_tips"
        android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>
